Fixed font spacing.

--- a/assets/scss/partial/header.scss
+++ b/assets/scss/partial/header.scss
@@ -56,7 +56,7 @@
       }
       li {
         display: inline-block;
-        margin-right: 15px;
+        margin-right: 9px;
         border-right: 1px dotted;
         border-color: $color-accent-1;
         vertical-align: middle;
